[project.urls]
"Source Code" = "https://github.com/ERGO-Code/HiGHS"
"Bug Tracker" = "https://github.com/ERGO-Code/HiGHS/issues"

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "highspy"
version = "1.13.1.dev5"
description = "A thin set of pybind11 wrappers to HiGHS"
authors = [{ name = "HiGHS developers", email = "highsopt@gmail.com" }]
readme = "README.md"

requires-python = ">=3.8"
dependencies = ["numpy"]

classifiers = [
  # "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]
hipo = ["highspy-extras>=1.12.0"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

# A list of packages to auto-copy into the wheel. If this is not set, it will
# default to the first of ``src/<package>``, ``python/<package>``, or
# ``<package>`` if they exist.  The prefix(s) will be stripped from the package
# name inside the wheel.
wheel.packages = ["highs/highspy"]

# Files to include in the SDist even if they are skipped by default. Supports
# gitignore syntax.
sdist.include = [
  "highs/highspy/highs.py",
  "highs/highspy/__init__.py",
  "highs/highspy/__init__.pyi",
  "highs/highspy/_core/*.pyi",
  "tests/test_highspy.py",
  "Version.txt",
  "LICENSE",
  "README.md",
  "highs/HConfig.h.in",
  "highs",
  "external",
  "cmake",
]

sdist.exclude = [
  ".github",
  ".gitattributes",
  ".gitignore",
  ".github",
  "app",
  "build",
  "check",
  "docs",
  "subprojects",
  ".coin-or",
  "build_webdemo.sh",
  ".clang-format",
  "__setup.py",
  "BUILD.bazel",
  "**meson**",
  "MODS.md",
  "WORKSPACE",
  "nuget/",
  "nuget/README.md",
  "highs/*.bazel*",
  "highs/*.meson*",
  "interfaces/*csharp*",
  "interfaces/*fortran*",
  "flake.*",
  "highs.pc.in",
]

# # A set of patterns to exclude from the wheel. This is additive to the SDist
# # exclude patterns. This applies to the final paths in the wheel, and can
# # exclude files from CMake output as well.  Editable installs may not respect
# # this exclusion.
wheel.exclude = ["include", "lib*/", "bin", "LICENSE.txt", "README.md"]

[tool.scikit-build.cmake.define]
HIPO_PYTHON_EXTRAS_BUILD = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error"]
testpaths = ["tests"]
norecursedirs = ["check", ".git", "build", "dist", "*.egg-info"]

[tool.cibuildwheel]
build = "*"
archs = ["auto64", "auto32"]

# Enable free-threaded support
enable = ["cpython-freethreading"]

test-command = "pytest {project}/tests"
test-extras = ["test", "numpy"]
build-verbosity = 1
